--- a/app/src/main/res/layout/activity_edit_memory.xml
+++ b/app/src/main/res/layout/activity_edit_memory.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="#FFF0F5">
+    android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
