--- a/app/src/main/res/layout/item_feed_quote.xml
+++ b/app/src/main/res/layout/item_feed_quote.xml
@@ -28,7 +28,7 @@
         android:scaleY="0.9"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="22dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_no_profile"
@@ -51,17 +51,17 @@
     <!-- 본문 텍스트 -->
     <TextView
         android:id="@+id/tv_content"
+        style="@style/TextAppearance.App.BodySmall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="10dp"
-        android:textColor="@color/black"
+        android:layout_marginStart="6dp"
         android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
-        style="@style/TextAppearance.App.BodySmall"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/iv_profile"
+        app:layout_constraintStart_toStartOf="@+id/tv_username"
         app:layout_constraintTop_toBottomOf="@+id/tv_username" />
 
     <!-- 더보기 버튼 -->
