--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -11,10 +11,9 @@
         android:id="@+id/iv_top_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-40dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        android:src="@drawable/bg_topbar" />
+        android:src="@drawable/bg_top_bar" />
 
     <!-- 나가기 버튼 -->
     <ImageView
@@ -22,7 +21,7 @@
         android:layout_width="17dp"
         android:layout_height="14dp"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="25dp"
         android:src="@drawable/ic_top_bar_close"
         android:visibility="gone" />
 
@@ -34,7 +33,7 @@
         android:layout_height="33dp"
         android:layout_gravity="start|center_vertical"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="28dp"
         android:src="@drawable/ic_no_profile" />
 
     <!-- 로고 이미지 -->
@@ -42,7 +41,7 @@
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-14dp"
+        android:layout_marginTop="-15dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_logo" />
 
@@ -62,11 +61,11 @@
     <!-- 알람 버튼 -->
     <ImageView
         android:id="@+id/iv_alarm"
-        android:layout_width="28dp"
-        android:layout_height="26dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_gravity="end|center_vertical"
-        android:layout_marginTop="-8dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
         android:src="@drawable/ic_alarm" />
 
 </FrameLayout>
