--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -8,8 +8,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:paddingVertical="15dp"
-            android:paddingHorizontal="16dp">
+            android:paddingVertical="15dp" >
 
             <!-- 더보기 이미지 -->
             <ImageView
@@ -17,6 +16,7 @@
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_marginTop="-5dp"
+                android:layout_marginEnd="16dp"
                 android:src="@drawable/ic_feed_overflow"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +28,7 @@
                 android:layout_height="30dp"
                 android:src="@drawable/ic_no_community"
                 android:layout_marginTop="10dp"
+                android:layout_marginStart="16dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -37,7 +38,7 @@
                 android:id="@+id/iv_profile"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="28dp"
                 android:layout_marginTop="25dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_no_profile"
@@ -55,7 +56,7 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/iv_community"
                 app:layout_constraintTop_toTopOf="@id/iv_community"
-                android:layout_marginStart="20dp" />
+                android:layout_marginStart="24dp" />
 
             <!-- 시간 -->
             <TextView
@@ -71,20 +72,20 @@
                 app:layout_constraintStart_toEndOf="@id/tv_username" />
 
             <!-- 본문 텍스트 -->
-            <TextView
-                android:id="@+id/tv_content"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="7dp"
-                android:layout_marginEnd="10dp"
-                android:textColor="@color/black"
-                android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
-                style="@style/TextAppearance.App.BodySmall"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/iv_profile"
-                app:layout_constraintTop_toBottomOf="@+id/tv_username" />
+        <TextView
+            android:id="@+id/tv_content"
+            style="@style/TextAppearance.App.BodySmall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="7dp"
+            android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_username" />
 
             <!-- 더보기 버튼 -->
             <TextView
@@ -110,8 +111,8 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_more"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="46dp"
-                android:layout_marginEnd="10dp">
+                android:layout_marginStart="70dp"
+                android:layout_marginEnd="30dp">
 
                 <!-- 이미지 레이아웃 1~4 -->
                 <include
@@ -142,8 +143,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:layout_marginStart="45dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@id/layout_image_container"
                 app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +159,7 @@
                 android:textColor="@color/gray3"
                 style="@style/TextAppearance.App.LabelMedium"
                 android:layout_marginTop="5dp"
-                android:layout_marginStart="45dp"
+                android:layout_marginStart="70dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layout_quote"/>
 
