--- a/app/src/main/res/layout/item_comment_detail.xml
+++ b/app/src/main/res/layout/item_comment_detail.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -10,7 +14,91 @@
         android:background="@drawable/bg_feed_detail"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="12dp"
+        android:elevation="4dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="22dp">
+
+        <!-- 커뮤니티 이미지 -->
+        <ImageView
+            android:id="@+id/iv_feed_community"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_no_community"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- 프로필 이미지 -->
+        <ImageView
+            android:id="@+id/iv_feed_profile"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="25dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_no_profile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- 유저 이름 -->
+        <TextView
+            android:id="@+id/tv_feed_username"
+            style="@style/TextAppearance.App.LabelLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="12dp"
+            android:text="유저1"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/iv_feed_profile"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- 유저 아이디 -->
+        <TextView
+            android:id="@+id/tv_feed_userid"
+            style="@style/TextAppearance.App.LabelSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_medium"
+            android:text="\@user1"
+            android:textColor="@color/gray2"
+            app:layout_constraintStart_toStartOf="@+id/tv_feed_username"
+            app:layout_constraintTop_toBottomOf="@id/tv_feed_username" />
+
+        <!-- 본문 텍스트 -->
+        <TextView
+            android:id="@+id/tv_feed_content"
+            style="@style/TextAppearance.App.BodySmall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="26dp"
+            android:layout_marginEnd="32dp"
+            android:text="텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트텍스트"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_feed_userid"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tv_feed_userid"
+            app:layout_constraintTop_toTopOf="@+id/tv_feed_username" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/bg_comment_contact"/>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/bg_feed_detail"
         android:elevation="4dp"
         android:paddingTop="12dp"
         android:paddingBottom="20dp">
@@ -20,8 +108,8 @@
             android:id="@+id/iv_back"
             android:layout_width="18dp"
             android:layout_height="18dp"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/ic_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,30 +121,20 @@
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_feed_overflow"
             android:layout_marginEnd="12dp"
+            android:src="@drawable/ic_feed_overflow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <!-- 커뮤니티 이미지 -->
-        <ImageView
-            android:id="@+id/iv_community"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="15dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_no_community"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_back" />
 
         <!-- 프로필 이미지 -->
         <ImageView
             android:id="@+id/iv_profile"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="30dp"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="14dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_no_profile"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,12 +147,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="17dp"
-            android:text="유저1"
+            android:layout_marginTop="1dp"
+            android:text="유저2"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/iv_profile"
-            app:layout_constraintTop_toBottomOf="@+id/iv_back" />
+            app:layout_constraintTop_toTopOf="@+id/iv_profile" />
 
         <!-- 유저 아이디 -->
         <TextView
@@ -83,7 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_medium"
-            android:text="\@user1"
+            android:text="\@user2"
             android:textColor="@color/gray2"
             app:layout_constraintStart_toStartOf="@+id/tv_username"
             app:layout_constraintTop_toBottomOf="@id/tv_username" />
@@ -104,73 +182,28 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_userid" />
 
 
-        <!-- 이미지 컨테이너 -->
-        <FrameLayout
-            android:id="@+id/layout_image_container"
-            android:layout_width="0dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <!-- 이미지 레이아웃 1~4 -->
-            <include
-                android:id="@+id/layout_image1"
-                layout="@layout/item_feed_image1"
-                android:visibility="gone" />
-
-            <include
-                android:id="@+id/layout_image2"
-                layout="@layout/item_feed_image2"
-                android:visibility="gone" />
-
-            <include
-                android:id="@+id/layout_image3"
-                layout="@layout/item_feed_image3"
-                android:visibility="gone" />
-
-            <include
-                android:id="@+id/layout_image4"
-                layout="@layout/item_feed_image4"
-                android:visibility="gone" />
-        </FrameLayout>
-
-
-        <!-- 인용 피드 컨테이너 -->
-        <FrameLayout
-            android:id="@+id/layout_quote"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="16dp"
-            app:layout_constraintTop_toBottomOf="@id/layout_image_container"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <!-- 날짜 표시 -->
         <TextView
             android:id="@+id/tv_date"
+            style="@style/TextAppearance.App.LabelMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roboto_medium"
             android:text="2025/00/00 00:00"
             android:textColor="@color/gray3"
-            style="@style/TextAppearance.App.LabelMedium"
-            android:fontFamily="@font/roboto_medium"
-            android:layout_marginTop="2dp"
-            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_quote"/>
+            app:layout_constraintTop_toBottomOf="@+id/tv_content" />
 
         <!-- 피드백 -->
         <LinearLayout
             android:id="@+id/ll_feed_actions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -193,13 +226,13 @@
 
                 <TextView
                     android:id="@+id/tv_comment"
+                    style="@style/TextAppearance.App.BodyMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="9dp"
-                    android:text="000"
-                    style="@style/TextAppearance.App.BodyMedium"
                     android:fontFamily="@font/roboto_semibold"
-                    android:textColor="@color/gray3"/>
+                    android:text="000"
+                    android:textColor="@color/gray3" />
             </LinearLayout>
 
             <!-- 좋아요 -->
@@ -219,12 +252,12 @@
 
                 <TextView
                     android:id="@+id/tv_like"
+                    style="@style/TextAppearance.App.BodyMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="9dp"
-                    android:text="000"
-                    style="@style/TextAppearance.App.BodyMedium"
                     android:fontFamily="@font/roboto_semibold"
+                    android:text="000"
                     android:textColor="@color/gray3" />
             </LinearLayout>
 
@@ -246,12 +279,12 @@
 
                 <TextView
                     android:id="@+id/tv_repost"
+                    style="@style/TextAppearance.App.BodyMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="9dp"
-                    android:text="000"
-                    style="@style/TextAppearance.App.BodyMedium"
                     android:fontFamily="@font/roboto_semibold"
+                    android:text="000"
                     android:textColor="@color/gray3" />
             </LinearLayout>
 
@@ -272,17 +305,27 @@
 
                 <TextView
                     android:id="@+id/tv_quote"
+                    style="@style/TextAppearance.App.BodyMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="9dp"
-                    android:text="000"
-                    style="@style/TextAppearance.App.BodyMedium"
                     android:fontFamily="@font/roboto_semibold"
+                    android:text="000"
                     android:textColor="@color/gray3" />
             </LinearLayout>
         </LinearLayout>
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_no_reply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="답글을 달아보세요"
+        android:layout_marginTop="32dp"
+        style="@style/TextAppearance.App.BodySmall"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:textColor="@color/gray4"/>
+
+</LinearLayout>
