--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -1,49 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/top_bar"
-    android:clickable="true"
-    android:focusable="true"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true">
 
-    <!-- 상단 바 배경 이미지 -->
+    <!-- 배경 이미지 -->
     <ImageView
         android:id="@+id/iv_top_bg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_height="match_parent"
         android:scaleType="fitCenter"
-        android:src="@drawable/bg_top_bar" />
-
-    <!-- 나가기 버튼 -->
-    <ImageView
-        android:id="@+id/iv_close"
-        android:layout_width="17dp"
-        android:layout_height="14dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/ic_top_bar_close"
-        android:visibility="gone" />
-
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_top_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 프로필 버튼 -->
     <ImageView
         android:id="@+id/iv_profile"
         android:layout_width="33dp"
         android:layout_height="33dp"
-        android:layout_gravity="start|center_vertical"
         android:layout_marginStart="11dp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/ic_no_profile" />
+        android:layout_marginBottom="14dp"
+        android:src="@drawable/ic_no_profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- 로고 이미지 -->
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-15dp"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_logo" />
+        android:src="@drawable/ic_logo"
+        android:layout_marginBottom="42dp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_top_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- 커뮤니티 이름 -->
     <TextView
@@ -51,21 +48,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_gravity="center"
         android:text="커뮤니티명"
         android:textColor="@color/gray2"
         style="@style/TextAppearance.App.TitleLarge"
         android:textStyle="bold"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 알람 버튼 -->
     <ImageView
-        android:id="@+id/iv_alarm"
+        android:id="@+id/iv_notification"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_gravity="end|center_vertical"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/ic_alarm" />
+        android:layout_marginBottom="43dp"
+        android:src="@drawable/ic_alarm"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
