--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -7,13 +7,24 @@
     android:clickable="true"
     android:focusable="true">
 
-    <!-- 상단~iv_top_bg 위까지 단색 배경 View -->
     <View
-        android:id="@+id/view_top_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F8F3FE"
+        app:layout_constraintBottom_toTopOf="@+id/rv_notifications"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- 상단~iv_top_bg 위까지 단색 배경 View -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_notifications"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#F8F3FE"
-        app:layout_constraintTop_toTopOf="parent"
+        android:clipToPadding="false"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:scrollbars="vertical"
+        app:layout_constraintTop_toBottomOf="@id/tv_notification_title"
         app:layout_constraintBottom_toTopOf="@id/iv_top_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -57,10 +68,10 @@
     <!-- 알람 버튼 -->
     <ImageView
         android:id="@+id/iv_notification"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="43dp"
+        android:layout_width="35dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="40dp"
         android:src="@drawable/ic_alarm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
