--- a/app/src/main/res/layout/fragment_cm_review.xml
+++ b/app/src/main/res/layout/fragment_cm_review.xml
@@ -100,7 +100,7 @@
 
             <!-- 기간 -->
             <TextView
-                android:id="@+id/tv_period_title"
+                android:id="@+id/tv_today_theater_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -111,7 +111,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_cast_expanded" />
 
             <TextView
-                android:id="@+id/tv_period"
+                android:id="@+id/tv_today_theater"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -119,9 +119,9 @@
                 android:text="TextView"
                 android:textColor="@color/gray2"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_period_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_period_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_period_title" />
+                app:layout_constraintBottom_toBottomOf="@+id/tv_today_theater_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_today_theater_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_today_theater_title" />
 
             <!-- 극장 -->
             <TextView
@@ -133,7 +133,7 @@
                 android:textColor="@color/gray2"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/tv_avg_rate"
-                app:layout_constraintTop_toBottomOf="@id/tv_period_title" />
+                app:layout_constraintTop_toBottomOf="@id/tv_today_theater_title" />
 
             <TextView
                 android:id="@+id/tv_theater"
